# DataForge

./: Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
data_forge/: main.py  settings.py  utils.py
data_forge/api/: __init__.py  dependencies.py  handlers.py
data_forge/api/endpoints/: __init__.py  job.py
data_forge/api/models/: base.py  job.py
data_forge/core/: enums.py  exceptions.py  jobs.py  models.py  scheduler.py  triggers.py
data_forge/database/: builder.py  engine.py
data_forge/processors/: __init__.py  table.py
data_forge/services/: job.py  report.py  reporter.py
